Made changes to the about html

--- a/about/index.html
+++ b/about/index.html
@@ -52,24 +52,22 @@
                         My weekdays would be full of essays, presentations, math tests, book reports, art projects,
                         and most importantly... my path to Stanford University! During highschool, I applied myself to my studies, 
                         I joined the art club, spent long hours at the library and made sure everything was in place. 
-                        All of my hard work ensured that I graduated validictorian in highschool and got my spot at Stanford!
+                        All of my hard work ensured that I graduated valedictorian in highschool and earned my spot at Stanford!
                     </p>
                 </div>
             </section>
             <section id="stanford">
                 <div class="full-width">
                     <h2>
-                        Stanford
+                        Stanford 🎓
                     </h2>
-                    <h3>
-                        Class of 2010 🎓
-                    </h3>
                     <p>
-                        I graduate class of 2010, with a smile on my face and pride like no other. My first year at Stanford was 
-                        quite the experience. I lived in Casa Zapata, met other first generation students, and embraced my new 
-                        academic future. I worked at El Centro Chicano for most of my years at Stanford. in that time, I helped set  
-                        up the Zoot Suit play production, provided other weekly activites to students, and helped
-                        entering students feel at home. After all, there is no better feeling than being in your <i>casita!</i>
+                        I graduated Stanford with a smile on my face and pride like no other. My time at Stanford was 
+                        quite the experience. I lived in Casa Zapata, met other first generation students, and embraced new 
+                        academic challenges. I had the opportunity to work at El Centro Chicano while at Stanford. 
+                        In that time, I helped set up the Zoot Suit play production, Dia De Los Muertos events and helped 
+                        entering students feel at home. After all, there is no better feeling 
+                        than being in your <i>casita!</i>
                     </p>
                     <h3>
                         Chocolate Croissants and Crumbling Empires
