Added to about me food section

--- a/about/index.html
+++ b/about/index.html
@@ -82,7 +82,7 @@
                         see the Berlin Wall or visit the deeply emotional Holocaust Museum. 
                     </p>
                     <p>
-                        My favorite part about traveling was the <i>food</i>. The palta I ate in Chile was charming. The bratwurst in 
+                        My favorite part about traveling was the <i>food</i>. The <i>palta</i> I ate in Chile was delightful. The bratwurst in 
                         Germany was different yet delicious. The gelatto in Rome was so refreshing. BUT the <i>chocolate croissants</i> 
                         I had in Germany! Oh my, oh my, those were to die for! Dreamy, soft, melty chocolate
                         nestled in a warm flaky croissant... its what dreams are made of! <i>So köstlich!</i>
