Added to food section html

--- a/about/index.html
+++ b/about/index.html
@@ -83,9 +83,9 @@
                     </p>
                     <p>
                         My favorite part about traveling was the <i>food</i>. The <i>palta</i> I ate in Chile was delightful. The bratwurst in 
-                        Germany was different yet delicious. The gelatto in Rome was so refreshing. BUT the <i>chocolate croissants</i> 
+                        Germany was iconic. The gelatto in Rome was so refreshing. BUT the <i>chocolate croissants</i> 
                         I had in Germany! Oh my, oh my, those were to die for! Dreamy, soft, melty chocolate
-                        nestled in a warm flaky croissant... its what dreams are made of! <i>So köstlich!</i>
+                        nestled in a warm flaky croissant... it's what dreams are made of! <i>So köstlich!</i>
                     </p>
                     <p>
                         Check me out on <a href="https://amstudies.stanford.edu/sites/amstudies/files/media/file/as_newsletter_2010.pdf" target="_blank">page 14!</a>
