Added scones section to hobbies

--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -60,6 +60,17 @@
                     </p>    
                 </div>   
             </section>
+            <section id="scones">
+                <div class="full-width">
+                    <h2>Scones</h2>
+                    <p>
+                        While exploring the Bay Area, I have embarked on a new journey... a Baked Goods Journey. From finding the 
+                        best scones to learning how to bake them, I love everything about this crumbly, buttery, flaky masterpiece!
+                        
+                    
+                    </p>
+                </div>
+            </section>
             <footer>
                 <div class="full-width">
                     <h3>
