Added notes to main

--- a/about/index.html
+++ b/about/index.html
@@ -93,6 +93,7 @@
                 </div>
             </section>
             <!-- 
+                remove at some point
             <section id="life-pinterest">
                 <div class="full-width">
                     <h2>
