--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
+        <button onclick="topFunction()" id="myBtn" title="Back to top">Top</button> 
+        <script>
+            let mybutton = document.getElementById("myBtn");
+            window.onscroll = function() {scrollFunction()};
+            function scrollFunction() {
+                if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                    mybutton.style.display = "block";
+                } else {
+                    mybutton.style.display = "none";
+                }
+            }
+            function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+            }
+        </script>
         <header>
             <div class="full-width">
                 <nav>
