Added changes to main

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 You can usually find me in the Pinterest office sending out well crafted emails and chatting away at the PinCafe. 
             </h2>
             <h2>
-                I take pride in knowing that my work comes first and puzzling comes second. Actually, its a close tie between 
+                I take pride in knowing that my work comes first, and puzzling comes second. Actually, its a close tie between 
                 puzzling and eating fresh baked cookies!
             </h2>  
         </header>
