--- a/about/index.html
+++ b/about/index.html
@@ -45,30 +45,27 @@
                     </p>
                     <p>    
                         Waking up before the sun rises was often difficult as a kid, but now I see 
-                        the hard work and effort that my parents did for my siblings and I. Without that experience, 
+                        the hard work and effort that my parents did for my siblings and I. Without that experience 
                         I can't say that I'd be the <i>strong, independent Latina</i> that I am today. 
                     </p>
                     <p>   
                         My weekdays would be full of essays, presentations, math tests, book reports, art projects,
                         and most importantly... my path to Stanford University! During highschool, I applied myself to my studies, 
                         I joined the art club, spent long hours at the library and made sure everything was in place. 
-                        All of my hard work ensured that I graduated validictorian in highschool and got my spot at Stanford! 
+                        All of my hard work ensured that I graduated valedictorian in highschool and earned my spot at Stanford! 
                     </p>
                 </div>
             </section>
             <section id="stanford">
                 <div class="full-width">
                     <h2>
-                        Stanford
+                        Stanford 🎓
                     </h2>
-                    <h3>
-                        Class of 2010 🎓
-                    </h3>
                     <p>
-                        I graduate class of 2010, with a smile on my face and pride like no other. My first year at Stanford was 
-                        quite the experience. I lived in Casa Zapata, met other first generation students, and embraced my 
-                        new academic future. I worked at El Centro Chicano for most of my years at Stanford. 
-                        In that time, I helped set up the Zoot Suit play production, provided other weekly activites to students, 
+                        I graduated Stanford with a smile on my face and pride like no other. My time at Stanford was 
+                        quite the experience. I lived in Casa Zapata, met other first generation students, and embraced 
+                        new academic challenges. I had the opportunity to work at El Centro Chicano while at Stanford. 
+                        In that time, I helped set up the Zoot Suit play production, Dia De Los Muertos events, 
                         and helped entering students feel at home. After all, there is no better feeling than being 
                         in your <i>casita!</i>
                     </p>
@@ -85,28 +82,13 @@
                         see the Berlin Wall or visit the deeply emotional Holocaust Museum. 
                     </p>
                     <p>
-                        My favorite part about traveling was the <i>food</i>. The palta I ate in Chile was charming. The bratwurst in 
-                        Germany was different yet delicious. The gelatto in Rome was so refreshing. 
+                        My favorite part about traveling was the <i>food</i>. The <i>palta</i> I ate in Chile was delightful. The bratwurst in 
+                        Germany was iconic. The gelatto in Rome was so refreshing. 
                         BUT the <i>chocolate croissants</i> I had in Germany! Oh my, oh my, those were to die for! 
-                        Dreamy, soft, melty chocolate nestled in a warm flaky croissant... its what dreams are made of! <i>So köstlich!</i>
+                        Dreamy, soft, melty chocolate nestled in a warm flaky croissant... it's what dreams are made of! <i>So köstlich!</i>
                     </p>
                     <p>
                         Check me out on <a href="https://amstudies.stanford.edu/sites/amstudies/files/media/file/as_newsletter_2010.pdf" target="_blank">page 14!</a>
-                    </p>
-                </div>
-            </section>
-            <section id="life-pinterest">
-                <div class="full-width">
-                    <h2>
-                        Life at Pinterest
-                    </h2>
-                    <p>
-                        Flashforward to today and now I am a proud Pinployee📌! Pinterest has been an amazing place where I have been 
-                        able to express myself and grow as a People Operations Specialist. 
-                    </p>
-                    <p>
-                        I take pride in my role at Pinterest, helping other Pinployees navigate the rather complicated world of 
-                        human resources is my calling. Is there any greater feeling than sending out a well worded email?
                     </p>
                 </div>
             </section>
