Updated work section

--- a/work/index.html
+++ b/work/index.html
@@ -33,7 +33,7 @@
                         Finding My Calling
                     </h2>
                     <p>
-                        As I navigated life after Stanford, <i>Go Cardinals!</i>, my career took me to unexpected places. 
+                        As I navigated life after Stanford, <i>Go Cardinal!</i>, my career took me to unexpected places. 
                         I stepped into the role of AmeriCorps VISTA Member, helped create dignified jobs for low-income women at WAGES, 
                         managed my dad's business, and soon started to dabble in the world of human resources.
                     </p>
@@ -52,22 +52,18 @@
                         People Operations Specialist
                     </h2>
                     <p>
-                        Ten years later, I am a proud member of the HR team at <span>Pinterest!</span> Umm, 
-                        wasn't HR supposed to be a <span>temporary career path</span>?! 
+                        Fast forward, I am now proud member of the People Team at <span>Pinterest!</span>
                     </p>
                     <p>
                         My day to day at <span>Pinterest</span> requires a few things. Coffee being my top priority 
-                        (thanks <span>PinCafe!</span>)... followed by perfectly crafted emails, smooth onboarding 
-                        for new employees and a few friendly calls with my fellow <span>Pinployees!</span> 
-                        As busy as the day gets, I make sure to carve time out and check-in with my co-workers. 
-                        With Pinflex, most of us work from home and venture into the office here and there. 
-                        This only makes it more important to check-in with each other, our mental health is top priority!
+                        (thanks <span>PinCafe!</span>)... followed by perfectly crafted emails, and a few friendly 
+                        calls with my fellow <span>Pinployees!</span> As busy as the day gets, I make sure to carve time 
+                        out and check-in with my co-workers. In the new post-COVID world it's even more important to check-in 
+                        with each other, our mental health is top priority!
                     </p>
                     <p>
-                        As I strive to create remarkable employee experiences through our onboarding process, I ensure that I am 
-                        cultivating strong relationships with other <span>Pinployees</span> so that I create a safe 
-                        space for those that are current and new employees. Human resources can be a complicated field, 
-                        I strive to make it a little easier to understand and friendlier for those that are seeking assistance. 
+                        My goal is to create remarkable employee experiences. Human resources can be a 
+                        complicated field, I strive to make it a little easier to understand and friendlier for all.
                     </p>
                 </div>
             </section>
