Added scones section to hobbies

--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -35,8 +35,8 @@
                         When All The Pieces Fit
                     </h2>
                     <p>
-                        There is no greater pleasure than putting together a 1000 piece puzzle! The time I spend putting together a 
-                        magical landscape, mythical creature or colorful scenery can be ✨<i>therapeutic</i>✨. 
+                        There is no greater pleasure than putting together a 1000 piece puzzle! The time I spend putting 
+                        together a magical landscape, mythical creature or colorful scenery can be ✨<i>therapeutic</i>✨. 
                     </p>
                     <p>
                         You build a magical scenery piece by piece and get to see your hard work come together as a beautiful 
@@ -59,6 +59,15 @@
                         and <span class="galletas">ice cold milk</span>? 
                     </p>    
                 </div>   
+            </section>
+            <section id="scones">
+                <div class="full-width">
+                    <h2>Scones</h2>
+                    <p>
+                        While exploring the Bay Area, I have embarked on a new journey... a <i>Baked Goods Journey.</i> From finding the 
+                        best scones to learning how to bake them, I love everything about this crumbly, buttery, flaky masterpiece! 
+                    </p>
+                </div>
             </section>
             <footer>
                 <div class="full-width">
