Added top button css

--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -21,8 +21,8 @@
                 }
             }
             function topFunction() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
+                document.body.scrollTop = 0;
+                document.documentElement.scrollTop = 0;
             }
         </script>
         <header class="puzzle-header">
@@ -78,10 +78,13 @@
             </section>
             <section id="scones">
                 <div class="full-width">
-                    <h2>Scones</h2>
+                    <h2>
+                        Scones
+                    </h2>
                     <p>
-                        While exploring the Bay Area, I have embarked on a new journey... a <i>Baked Goods Journey.</i> From finding the 
-                        best scones to learning how to bake them, I love everything about this crumbly, buttery, flaky masterpiece! 
+                        While exploring the Bay Area, I have embarked on a new journey... a <i>Baked Goods Journey.</i> 
+                        From finding the best scones to learning how to bake them, 
+                        I love everything about this crumbly, buttery, flaky masterpiece! 
                     </p>
                 </div>
             </section>
