--- a/work/index.html
+++ b/work/index.html
@@ -68,7 +68,7 @@
                         People Operations Specialist
                     </h2>
                     <p>
-                        Fast forward, I am now proud member of the People Team at <span>Pinterest!</span>
+                        Fast forward, I am now a proud member of the People Team at <span>Pinterest!</span>
                     </p>
                     <p>
                         My day to day at <span>Pinterest</span> requires a few things. Coffee being my top priority 
