Updated about section

--- a/about/index.html
+++ b/about/index.html
@@ -56,9 +56,7 @@
                         Monday-Friday I would apply myself at school, and on the weekends it was family time... at the swapmeet!
                         I'd help my parents sell, display merchandise, and clean up. 
                     </p>
-                    <p>
-                        <img src="../img/isa-swapmeet.png" alt="Isa and parents"/>
-                    </p>
+                    <img class="parent-selfie" src="../img/isa-swapmeet.png" alt="Isa and parents"/>
                     <p>    
                         Waking up before the sun rises was often difficult as a kid, but now I see 
                         the hard work and effort that my parents did for my siblings and I. Without that experience 
